Various cleanup, especially of calendars.